# 2_semester

./: .gitignore
labs/1_lab/: CMakeLists.txt  main.cpp
labs/1_lab/inc/: animation.h
labs/1_lab/src/: animation.cpp
labs/2_lab/: CMakeLists.txt  main.cpp
labs/3_lab/: CMakeLists.txt  main.cpp
labs/3_lab/inc/: complex.h
labs/3_lab/src/: complex.cpp
labs/4_lab/: CMakeLists.txt  main.cpp
labs/4_lab/inc/: matrix.h
labs/4_lab/src/: matrix.cpp
labs/5_lab/: CMakeLists.txt  main.cpp
labs/5_lab/inc/: vectorBool.h
labs/8_lab/: stack.h
practice/1_pract/: CMakeLists.txt  main.cpp
practice/2_pract/: CMakeLists.txt  main.cpp
practice/3_pract/: CMakeLists.txt  main.cpp
practice/3_pract/inc/: kinematicSolver.h
practice/3_pract/src/: kinematicSolver.cpp
practice/4_pract/: CMakeLists.txt  list.txt  main.cpp
practice/4_pract/inc/: Device.h
